fix layout issue pushing movies to top and icon to center main with display flex

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     padding:auto;
     margin:auto;
@@ -71,7 +70,6 @@ main {
     background-color: #ffffff;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    display: flex;
 }
 
 
@@ -117,22 +115,11 @@ form button:hover {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 .card {
     max-width: 80%;
     border-bottom: rgb(150, 147, 147) 1px solid;
     display: flex;
+    padding-top: 30px;
 }
 
 
